--- a/styles.css
+++ b/styles.css
@@ -10,13 +10,13 @@ body {
 }
 
 .card {
-    height: 60%;
-    max-height: 600px;
+  height: 80%;
+  max-height: 700px;
   width: 50%;
   max-width: 500px;
-  color : #fff;
-  background: linear-gradient(135deg, #00feba , #5b548a);
-  margin : 150px auto 0;
+  color: #fff;
+  background: linear-gradient(135deg, #00feba, #5b548a);
+  margin: 100px auto 0;
   border-radius: 20px;
   display: flex;
   flex-direction: column;
@@ -24,39 +24,77 @@ body {
   align-items: center;
 }
 
-.search{
-    width : 100%;
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
+.search {
+  width: 100%;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
 }
 
 .search input {
-    border : 0 ;
-    outline : 0;
-    color :#555;
-    padding: 10px 25px;
-    height : 60px;
-    border-radius : 30px;
-    flex : 1;
-    margin-right: 16px;
-    font-size: 18px;
-    margin-left: 25px
+  border: 0;
+  outline: 0;
+  color: #555;
+  padding: 10px 25px;
+  height: 60px;
+  border-radius: 30px;
+  flex: 1;
+  margin-right: 16px;
+  font-size: 18px;
+  margin-left: 25px;
 }
 
-.search-button{
-    border : 0 ;
-    outline : 0;
-    height : 60px;
-    width : 80px;
-    border-radius : 30px;
-    background-color: white;
-    margin-right: 25px
+.search-button {
+  border: 0;
+  outline: 0;
+  height: 60px;
+  width: 80px;
+  border-radius: 30px;
+  background-color: white;
+  margin-right: 25px;
 }
 
 .temp {
-    text-align: center;
+  text-align: center;
 }
 .city {
-    text-align: center;
+  text-align: center;
+}
+
+.weather-icon {
+  width: 170px;
+  margin-top: 30px;
+}
+
+.weather h1 {
+  font-size: 80px;
+  font-weight: 500;
+}
+.weather h2 {
+  font-size: 45px;
+  font-weight: 400;
+  margin-top: -10px;
+}
+
+.details {
+width: 100%;
+  display: flex;
+  align-items: center;
+  justify-content:space-around;
+  padding: 0 20px;
+  margin-top: 50px;
+}
+.para{
+    margin-left: 10px;
+}
+.col {
+    display: flex;
+    align-items: center;
+    text-align: left;
+}
+.col img {
+    width: 60px;
+}
+.text {
+    font-size: 25px;
 }
