--- a/styles.css
+++ b/styles.css
@@ -12,7 +12,7 @@ body {
 .card {
   height: 80%;
   max-height: 700px;
-  width: 50%;
+  width: 80%;
   max-width: 500px;
   color: #fff;
   background: linear-gradient(135deg, #00feba, #5b548a);
@@ -64,6 +64,7 @@ body {
 .weather-icon {
   width: 170px;
   margin-top: 30px;
+  align-items: center;
 }
 
 .weather h1 {
@@ -95,6 +96,10 @@ width: 100%;
 .col img {
     width: 60px;
 }
-.text {
-    font-size: 25px;
+.text1 {
+    font-size: 22px;
+    text-align: center;
+}
+.text2 {
+    font-size: 22px;
 }
